--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -220,10 +220,11 @@
         <div class="main-content">
             <header>
                 <div class="header-content">
-                    <h1>Paramètres</h1>
+                    <h1>Paramètres de Répartition</h1>
                     <div class="user-info">
-                        <span id="usernameDisplay">Administrateur</span>
-                        <i class="fas fa-user-circle"></i>
+                        <img id="userAvatar" src="/images/default_avatar.png" alt="User Avatar" style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px; vertical-align: middle;">
+                        <span id="usernameDisplay">Utilisateur</span>
+                        <!-- <i class="fas fa-user-circle"></i> --> <!-- Optional: Keep or remove -->
                     </div>
                 </div>
             </header>
@@ -829,6 +830,7 @@
             console.error("Username display element 'usernameDisplay' not found.");
         }
     </script>
+    <script src="../js/ui/updateHeader.js"></script> <!-- Add header update script -->
 
     <!-- Modal for Report Export removed -->
 
