Users management-buton trigger

--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -238,6 +238,7 @@
                 <button class="tab active">Facteurs de répartition</button>
                 <button class="tab">Paramètres généraux</button>
                 <button class="tab">Génération de rapports</button>
+                <button class="tab">Gestion des utilisateurs</button>
             </div>
 
             <div class="content-section" id="facteurs-repartition-section">
