--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -338,8 +338,8 @@
                 <!-- New Export Data Button -->
                 <button id="exportDataBtn" class="btn btn-primary" style="margin-top: 15px;">Exporter les données</button>
             </div>
-
-            <div class="content-section" id="facteurs-repartition-section">
+            <!-- Section GGestion des utilisateurs -->
+            <div class="content-section" id="Gestion-utilisateurs-section">
                 <h2 class="section-title">Gestion des utilisateurs</h2>
                 <p class="section-subtitle">Gérez les utilisateurs de l'application.</p>
                 <!-- Add user management content here -->
