Gestion utilisateur supprimer not ok

--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -345,6 +345,10 @@
                 <div id="user-list-container">
                     <!-- User list will be loaded here -->
                 </div>
+                <button class="btn-save" id="delete-user-button">
+                    <i class="fas fa-trash-alt"></i>
+                    Supprimer utilisateur
+                </button>
                 <!-- Add other user management content here if needed -->
             </div>
         </div>
