Smal bug inParamètres page fixed

--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -262,7 +262,7 @@
       <div class="main-content">
         <header>
           <div class="header-content">
-            <h1>Paramètres de Répartition</h1>
+            <h1>Paramètres</h1>
             <div class="user-info">
               <img
                 id="userAvatar"
@@ -282,7 +282,7 @@
             </div>
           </div>
         </header>
-
+        <br />
         <div class="alert-info">
           <i class="fas fa-info-circle"></i>
           <p>
@@ -473,7 +473,7 @@
           </button>
         </div>
         <!-- Section Gestion des utilisateurs -->
-        <div class="content-section" id="Gestion-utilisateurs-section">
+        <div class="content-section" id="Gestion-utilisateurs-section" style="display: none;">
           <h2 class="section-title">Gestion des utilisateurs</h2>
           <p class="section-subtitle">
             Gérez les utilisateurs de l'application.
