--- a/templates/revenus.html
+++ b/templates/revenus.html
@@ -117,10 +117,12 @@
         </div>
     </div>
 
+
     <!-- Modal Ajouter Revenu -->
     <div class="modal" id="modal-add-revenu">
         <div class="modal-content">
             <div class="modal-header">
+                <img src="/assets/favicon.ico" alt="MSP Gestion Logo">
                 <h3 class="modal-title">Ajouter un revenu</h3>
                 <button class="modal-close">&times;</button>
             </div>
