--- a/templates/associes.html
+++ b/templates/associes.html
@@ -93,6 +93,7 @@
     <div class="modal" id="modal-add-associe">
         <div class="modal-content">
             <div class="modal-header">
+                <img src="/assets/favicon.ico" alt="MSP Gestion Logo">
                 <h3 class="modal-title">Ajouter un associé</h3>
                 <button class="modal-close">&times;</button>
             </div>
@@ -143,6 +144,7 @@
     <div class="modal" id="modal-edit-associe">
         <div class="modal-content">
             <div class="modal-header">
+                <img src="/assets/favicon.ico" alt="MSP Gestion Logo">
                 <h3 class="modal-title">Modifier un associé</h3>
                 <button class="modal-close">&times;</button>
             </div>
