--- a/templates/charges.html
+++ b/templates/charges.html
@@ -138,6 +138,7 @@
     <div class="modal" id="modal-add-charge">
         <div class="modal-content">
             <div class="modal-header">
+                <img src="/assets/favicon.ico" alt="MSP Gestion Logo">
                 <h3 class="modal-title">Ajouter une charge</h3>
                 <button class="modal-close">&times;</button>
             </div>
