--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -214,46 +214,46 @@
         <nav>
           <ul>
             <li>
-              <a href="../index.html"><i class="fas fa-home"></i> Accueil</a>
+              <a href="../index.html"><i class="fas fa-home"></i> <span>Accueil</span></a>
             </li>
             <li>
               <a href="revenus.html"
-                ><i class="fas fa-money-bill-wave"></i> Revenus ACI</a
+                ><i class="fas fa-money-bill-wave"></i> <span>Revenus ACI</span></a
               >
             </li>
             <li>
               <a href="associes.html"
-                ><i class="fas fa-user-md"></i> Associés</a
+                ><i class="fas fa-user-md"></i> <span>Associés</span></a
               >
             </li>
             <li>
               <a href="charges.html"
-                ><i class="fas fa-file-invoice-dollar"></i> Charges</a
+                ><i class="fas fa-file-invoice-dollar"></i> <span>Charges</span></a
               >
             </li>
             <li>
               <a href="rcpmeeting.html"
-                ><i class="fas fa-users"></i> Réunions RCP</a
+                ><i class="fas fa-users"></i> <span>Réunions RCP</span></a
               >
             </li>
             <li>
               <a href="projets.html"
-                ><i class="fas fa-tasks"></i> Projets & Missions</a
+                ><i class="fas fa-tasks"></i> <span>Projets & Missions</span></a
               >
             </li>
             <li>
               <a href="repartition.html"
-                ><i class="fas fa-chart-pie"></i> Répartition</a
+                ><i class="fas fa-chart-pie"></i> <span>Répartition</span></a
               >
             </li>
             <li class="active">
               <a href="parametres.html"
-                ><i class="fas fa-cog"></i> Paramètres</a
+                ><i class="fas fa-cog"></i> <span>Paramètres</span></a
               >
             </li>
             <li>
               <a href="../login.html" id="logoutButton"
-                ><i class="fas fa-sign-out-alt"></i> Déconnexion</a
+                ><i class="fas fa-sign-out-alt"></i> <span>Déconnexion</span></a
               >
             </li>
           </ul>
@@ -262,6 +262,8 @@
       <div class="main-content">
         <header>
           <div class="header-content">
+            <!-- Add the toggle button here -->
+            <button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button>
             <h1>Paramètres</h1>
             <div class="user-info">
               <img
