--- a/templates/rcpmeeting.html
+++ b/templates/rcpmeeting.html
@@ -420,7 +420,7 @@
 </body>
 </html>
     <script type="module" src="../js/main.js"></script>
-    <script src="../js/ui/updateHeader.js">\</script>
+    <script src="../js/ui/updateHeader.js"></script>
     <script type="module">
         import { dataService } from '/js/services/DataService.js';
 
