--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -146,6 +146,7 @@
 
       .slider {
         -webkit-appearance: none;
+        appearance: none;
         width: 100%;
         height: 4px;
         background: #e0e0e0;
